# surface-tracker

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGES.rst  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  update_license_header.py
.github/workflows/: build-test-deploy.yml  main.yml
docs/: api.rst  conf.py  index.rst
examples/: visualize_surface_in_image.ipynb
src/pupil_labs/surface_tracker/: __init__.py  camera.py  coordinate_space.py  corner.py  heatmap.py  image_crop.py  location.py  marker.py  orientation.py  surface.py  tracker.py  utils.py  visual_anchors.py
src/surface_tracker/: __init__.py  camera.py  coordinate_space.py  corner.py  gaze_on_surface.py  gaze_on_surface_distribution.py  heatmap.py  image_crop.py  location.py  marker.py  orientation.py  surface.py  tracker.py  utils.py  visual_anchors.py
tests/unit/: test_corner.py  test_package.py  test_utils.py
