[metadata]
name = pupil_labs_surface_tracker
description = Surface tracker
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pupil-labs/surface-tracker
author = Pupil Labs GmbH
author_email = info@pupil-labs.com
license = LGPL-3.0
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Changelog=https://github.com/pupil-labs/surface-tracker/blob/master/CHANGES.rst
    Documentation=https://docs.pupil-labs.com/cloud/enrichments/#marker-mapper

[options]
packages = find_namespace:
install_requires =
    numpy
    importlib-metadata;python_version<"3.8"
python_requires = >=3.6
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src
exclude =
    build*
    dist*
    docs*
    tests*

[options.extras_require]
docs =
    furo
    jaraco.packaging>=8.2
    rst.linker>=1.9
    sphinx<4.4  # 4.4 does not detect TypeVars correctly
example =
    Pillow
    matplotlib
    msgpack
    opencv-python
    pupil-apriltags
testing =
    opencv-python-headless
    pytest>=6
    pytest-checkdocs>=2.4
    pytest-cov
    pytest-enabler>=1.0.1
    pytest-mypy
