[metadata]
name = surface_tracker
version = 0.0.1
description = Surface tracker
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pupil-labs/surface-tracker
author = Pupil Labs GmbH
author_email = pypi@pupil-labs.com
license = LGPL-3.0
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
project_urls =
    Changelog=https://github.com/pupil-labs/surface-tracker/blob/master/CHANGELOG.md
    Documentation=https://docs.pupil-labs.com/cloud/enrichments/#marker-mapper

[options]
packages = find:
install_requires =
    numpy
python_requires = >=3.6
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[tox:tox]
envlist = py36, py37, py38, py39, py310, py311
skip_missing_interpreters = true
isolated_build = true

[testenv]
changedir = tests
deps =
    pytest
    opencv-python-headless==4.6.0.66  # last version with 3.6 abi

[gh-actions]
python =
    3.6: py36
    3.7: py37
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311
